  * Intervention is based on a rising threshold based on build type and presence of Apple firmware
- Removes `BootKicker` feature
  * The feature was added as part of attempts to provide the RefindPlus screen on MacPro5,1
  * This was ultimately achieved via other means but the feature was maintained for potential benefits
  * The feature never actually worked properly however, hence the removal
- Amends GOP Mode Selection Preference
  * RefindPlus defaults to selecting the maximum resolution GOP Mode when a screen resolution is not specified
  * When two modes have the same resolution, the later mode was used
  * This is now changed to prefer the first mode found
- Amends OpenProtocol Remapping on Macs without AppleFramebuffers
  * The remapping is now disabled when GOP is absent on any type of firmware
  * It is now also disabled when AppleFramebuffers are absent on Apple firmware
  * This is to avoid potential memory management issues pending further investigation
- Amends Default Loader Scan for APFS Support Volumes
  * APFS `Recovery`, `Update` and `VM` volumes are now added to the `DontScanVolume` list by default
- Amends Scan for `.VolumeIcons` and `VolumeBadges`
  * Volumes in the `DontScanVolume` list are now skipped
- Amends System Table Reallocations
  * No longer copies memory for system table reallocations
  * Some Mac models fail to boot with this following recent firmware updates
  * Other recent changes to RefindPlus may have also affected booting 'FileVault' encrypted volumes
- Amends 'HandleProtocol' Stashing
  * No longer stashes and restores HandleProtocol on 'OcProvideConsoleGop' call
- Amends 'CleanNvram' Feature
  * The Emulated NVRAM on the filesystem is now also cleared
- Renames the `SilentBoot` Feature as `DirectBoot`
  * This more accurately describes the feature.
- Renames Misc Tokens to Permit Grouping of Related Tokens
  * The `uga_pass_through` token is renamed as `pass_uga_through`